# BridgeVicon

./: .gitignore  CMakeLists.txt  README.md  config.ini
include/: BridgeVicon.h
src/: BridgeVicon.cpp  main.cpp
